<resources>
    <string name="addresses_copied">Copied to clipboard.</string>
    <string name="app_name">@string/app_name_consumer</string>
    <string name="barcode_scan_message">Place a Bitcoin QR code inside the\nviewfinder to scan it.</string>
    <string name="copy_address">Copy Address</string>
    <string name="my_address">My Address</string>
    <string name="scan_tabs_left_button">Scan code</string>
    <string name="scan_tabs_right_button">My address</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="a_card_setup_error_occurred">A card setup error occurred</string>
    <string name="a_payment_processing_error_occurred">A payment processing error occurred</string>
    <string name="a_verification_error_occurred">A verification error occurred</string>
    <string name="abandon_add_bank_message">Are you sure you want to cancel adding a bank account?</string>
    <string name="abandon_email_message">Are you sure you want to sign-up with a different email?</string>
    <string name="abandon_login_message">Are you sure you want to abandon login process?</string>
    <string name="abandon_signup_message">Are you sure you want to abandon the sign-up process?</string>
    <string name="abandon_state_selection">Do you want to abandon the state selection process?</string>
    <string name="abandon_user_agreement">Do you want to abandon agreeing to terms of service?</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="accept_terms_description">Loading Terms of Service…</string>
    <string name="account_address_copied">Your %1$s Address has been\n copied to your clipboard</string>
    <string name="account_android_pin">Android App PIN</string>
    <string name="account_bitcoin_units">Bitcoin units</string>
    <string name="account_created">Account created.</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_details_missing">Missing account information</string>
    <string name="account_email">Email</string>
    <string name="account_header">Account</string>
    <string name="account_identity_verifications">Identity Verifications</string>
    <string name="account_list_error">Could not load list.</string>
    <string name="account_locked">Account locked</string>
    <string name="account_locked_upper_case">YOUR ACCOUNT IS LOCKED</string>
    <string name="account_name">Name</string>
    <string name="account_native_currency">Native Currency</string>
    <string name="account_number">Account number</string>
    <string name="account_phone_numbers">Phone Numbers</string>
    <string name="account_save_progress">Saving…</string>
    <string name="account_settings_identity_document">Identity Document</string>
    <string name="account_settings_personal_information">Personal Information</string>
    <string name="account_settings_verification_header">Verification</string>
    <string name="account_setup">Account setup</string>
    <string name="account_successfully_added">Account successfully added!</string>
    <string name="account_time_zone">Time Zone</string>
    <string name="account_transactions_enable_receive">Enable receiving?</string>
    <string name="account_transactions_enable_send">Enable sending?</string>
    <string name="account_transactions_enable_send_receive_explanation">Enable sending and receiving digital currencies by verifying your account.</string>
    <string name="account_transactions_verify_your_account">Verify your account</string>
    <string name="account_type_business_checking">Business Checking</string>
    <string name="account_type_checking">Checking</string>
    <string name="account_type_savings">Savings</string>
    <string name="account_unavailable_error_occurred">Selected account is unavailable, please try again.</string>
    <string name="account_verification_in_progress">Account verification in progress</string>
    <string name="accounts">Accounts</string>
    <string name="accounts_title">Choose an account</string>
    <string name="acknowledge">I acknowledge</string>
    <string name="add">ADD</string>
    <string name="add_bank_manual_description">Add your bank account and routing number. We\'ll send 2 small verification deposits. Takes 5 days.</string>
    <string name="add_bank_manual_title">Verify with deposits</string>
    <string name="add_bank_plaid_description">Securely log-in to your bank. Connect and deposit instantly.</string>
    <string name="add_bank_plaid_title">Instant Authorization</string>
    <string name="all_done">All done</string>
    <string name="all_set_details">You\'re now all set to buy / sell with your %1$s bank account.</string>
    <string name="btn_invest_now">Invest Now</string>
    <string name="connect_instantly">Connect Instantly</string>
    <string name="connect_manually">Connect Manually</string>
    <string name="gdpr_privacy_notice">Our privacy notice</string>
    <string name="gdpr_privacy_notice_paragraph">Below is a brief summary of how we process your personal data. For more detailed information, please read our full &lt;a href=https://www.coinbase.com/legal/privacy&gt;Privacy Policy&lt;/a&gt;.</string>
    <string name="gdpr_privacy_notice_paragraph_1">Coinbase UK Ltd. and CB Payments Ltd. are the “controllers” of the personal data you provide to Coinbase. We collect identity, job-related, and financial information about you.</string>
    <string name="gdpr_privacy_notice_paragraph_2">We will use your personal data to, among other things, process your transactions, manage and administer your customer account, personalize content, analyze how to improve our services, protect you from fraud, and comply with legal and regulatory obligations. With your consent, we’d like to keep in touch with you about the work we’re doing, including feature changes and product updates.</string>
    <string name="gdpr_privacy_notice_paragraph_3">We will share your data within the Coinbase group, with vendors and service providers, and with other organizations as required by law.</string>
    <string name="gdpr_privacy_notice_paragraph_4">You can exercise your privacy rights at any time by visiting your Privacy Rights dashboard in Settings. Your privacy rights include access, correction, erasure, restriction, objection, and data portability.</string>
    <string name="gdpr_privacy_notice_scroll_to_acknowledge">Scroll to bottom to acknowledge</string>
    <string name="gdpr_privacy_notice_subtitle_1">Data Collection</string>
    <string name="gdpr_privacy_notice_subtitle_2">Purposes of Collection</string>
    <string name="gdpr_privacy_notice_subtitle_3">Sharing</string>
    <string name="gdpr_privacy_notice_subtitle_4">Your Choices</string>
    <string name="login_email_hint">you@domain.com</string>
    <string name="login_email_prompt">EMAIL</string>
    <string name="login_first_name_hint">First Name</string>
    <string name="login_first_name_label">FIRST NAME</string>
    <string name="login_last_name_hint">Last Name</string>
    <string name="login_last_name_label">LAST NAME</string>
    <string name="login_password_prompt">PASSWORD</string>
    <string name="marketing_email_paragraph">Do you want to receive personalized email updates about products, services, and special offers based on interests and usage?</string>
    <string name="marketing_email_title">Stay in the know</string>
    <string name="marketing_respect_inbox">We promise to respect your inbox — we don’t like too many emails, either.</string>
    <string name="no">NO</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_certify_agree_acknowledge">I certify that I am 18 years of age or older, I agree to the &lt;a href=https://www.coinbase.com/legal/user_agreement&gt;User Agreement&lt;/a&gt;, and acknowledge the &lt;a href=https://www.coinbase.com/legal/privacy&gt;Privacy Policy&lt;/a&gt;.</string>
    <string name="signing_up">Signing up…</string>
    <string name="signup_password_hint">Create a new password</string>
    <string name="yes">YES</string>
</resources>