<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/rlContainer" android:tag="layout/controller_gdpr_marketing_email_prompt_0" android:background="@drawable/signin_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/llWhiteBoxContainer" android:background="@drawable/white_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/signup_form_horizontal_margin" android:layout_marginTop="@dimen/margin_4x" android:layout_marginRight="@dimen/signup_form_horizontal_margin" android:layout_marginBottom="@dimen/margin_4x" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0b0130" android:layout_marginTop="@dimen/margin_4x" android:src="@drawable/gdpr_marketing" android:scaleType="fitCenter" />
        <TextView android:id="@+id/tvTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/marketing_email_title" style="@style/OnboardingTitle" />
        <TextView android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_3x" android:text="@string/marketing_email_paragraph" style="@style/OnboardingParagraph" />
        <View android:background="@color/cloud_grey" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:id="@+id/btnYes" android:padding="@dimen/margin_2x" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/yes" style="@style/SignInButtonPrimary" />
        <View android:background="@color/cloud_grey" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
        <TextView android:id="@+id/btnNo" android:background="@drawable/white_box" android:padding="@dimen/margin_2x" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no" style="@style/SignInButtonPrimary" />
    </LinearLayout>
    <TextView android:textColor="@color/white_70" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_6x" android:layout_marginRight="@dimen/margin_6x" android:text="@string/marketing_respect_inbox" android:layout_below="@+id/llWhiteBoxContainer" android:lineSpacingExtra="4sp" />
    <ProgressBar android:id="@id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
</RelativeLayout>
