<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:tag="layout/activity_signup_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/signin_background" />
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/llSignupForm" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/signup_form_horizontal_margin" android:layout_marginTop="@dimen/margin_double" android:layout_marginRight="@dimen/signup_form_horizontal_margin" android:layout_alignParentTop="true"
        <LinearLayout android:orientation="vertical" android:background="@drawable/white_box" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textColor="0x106000c" android:linksClickable="false" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="10dp" android:paddingTop="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_first_name_label" android:singleLine="true" />
            <EditText android:textSize="14sp" android:textColorHint="@color/custom_gray_for_hint" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/etSignupFirstNameField" android:background="0x106000d" android:paddingLeft="10dp" android:paddingRight="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:hint="@string/login_first_name_hint" android:ems="10" android:singleLine="true" />
            <View android:background="0x1060000" android:visibility="visible" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x19999a31" />
            <TextView android:textColor="0x106000c" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="10dp" android:paddingTop="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_last_name_label" android:singleLine="true" />
            <EditText android:textSize="14sp" android:textColorHint="@color/custom_gray_for_hint" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/etSignupLastNameField" android:background="0x106000d" android:paddingLeft="10dp" android:paddingRight="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:hint="@string/login_last_name_hint" android:ems="10" android:singleLine="true" />
            <View android:background="0x1060000" android:visibility="visible" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x19999a31" />
            <TextView android:textColor="0x106000c" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="10dp" android:paddingTop="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_email_prompt" android:singleLine="true" />
            <EditText android:textSize="14sp" android:textColorHint="@color/custom_gray_for_hint" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/etSignupEmailField" android:background="0x106000d" android:paddingLeft="10dp" android:paddingRight="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:hint="@string/login_email_hint" android:ems="10" android:singleLine="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" android:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
            <View android:background="0x1060000" android:visibility="visible" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x19999a31" />
            <TextView android:textColor="0x106000c" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="10dp" android:paddingTop="10dp" android:longClickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/login_password_prompt" android:singleLine="true" />
            <EditText android:textSize="14sp" android:textColorHint="@color/custom_gray_for_hint" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/etSignupPasswordField" android:background="0x106000d" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:hint="@string/signup_password_hint" android:ems="10" android:singleLine="true" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <View android:background="0x1060000" android:visibility="visible" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x19999a31" />
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatCheckBox android:id="@+id/checkboxCertifyAgreeAcknowledge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_2x" />
                <TextView android:id="@+id/tvCertifyAgreeAcknowledge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_2x" android:text="@string/sign_up_certify_agree_acknowledge" android:layout_marginEnd="@dimen/margin_2x" />
            </LinearLayout>
            <View android:background="0x1060000" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x19999a31" />
            <TextView android:enabled="false" android:id="@+id/btnSignupSubmit" android:background="@drawable/white_box" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_extra_small" android:text="@string/sign_up" android:filterTouchesWhenObscured="true" style="@style/SignInButtonPrimary" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_double_large" android:layout_centerInParent="true">
        <com.coinbase.android.ui.MaterialProgressBar android:id="@+id/progressDeviceConfirmation" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/tvDeviceConfirmation" android:padding="15dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signing_up" />
    </LinearLayout>
</RelativeLayout>
