<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@+id/llPlaidAllDone" android:tag="layout/plaid_login_all_done_0" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default" android:layout_marginBottom="@dimen/margin_default" android:src="@drawable/ic_accept" />
    <TextView android:textSize="@dimen/text_size_normal" android:textStyle="bold" android:textColor="@color/primary_mystique_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default" android:layout_marginBottom="@dimen/margin_default" android:text="@string/all_done" />
    <TextView android:textColor="@color/primary_mystique_light_text_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/tvPlaidAllDoneDetails" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_default" android:text="@string/all_set_details" />
    <Button android:id="@+id/btnPlaidAllDoneSubmit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_large" android:layout_marginTop="@dimen/margin_default" android:layout_marginRight="@dimen/margin_large" android:text="@string/btn_invest_now" android:filterTouchesWhenObscured="true" style="@style/PrimaryMystiqueButton" />
</LinearLayout>
