<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:tag="layout/controller_bank_picker_0" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent"
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.design.widget.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:id="@+id/cvCoinbaseToolbar" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f010088" />
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>
    <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:paddingLeft="@dimen/margin_default" android:paddingRight="@dimen/margin_default" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="UNKNOWN_DATA_0x7f0b0068" android:layout_height="UNKNOWN_DATA_0x7f0b0064" android:layout_marginTop="@dimen/add_bank_vertical_margin" android:src="@drawable/add_bank" />
        <TextView android:textSize="@dimen/text_size_large_mystique" android:textColor="@color/primary_mystique_text_color" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/add_bank_plaid_title" />
        <TextView android:textSize="@dimen/text_size_normal_mystique" android:textColor="@color/primary_mystique_light_text_color" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/add_bank_horizontal_margin" android:layout_marginTop="@dimen/margin_medium" android:layout_marginRight="@dimen/add_bank_horizontal_margin" android:text="@string/add_bank_plaid_description" />
        <Button android:textSize="@dimen/text_size_medium_mystique" android:textColor="@color/white" android:id="@+id/btnConnectInstantly" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/add_bank_horizontal_margin" android:layout_marginTop="@dimen/margin_normal" android:layout_marginRight="@dimen/add_bank_horizontal_margin" android:text="@string/connect_instantly" android:textAllCaps="false" style="@style/PrimaryMystiqueButton" />
        <LinearLayout android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0b0062" android:layout_marginLeft="@dimen/add_bank_horizontal_margin" android:layout_marginRight="@dimen/add_bank_horizontal_margin" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:background="@color/primary_mystique_light_text_color" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_weight="0.5" />
            <TextView android:textSize="@dimen/text_size_medium_mystique" android:textColor="@color/primary_mystique_light_text_color" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="@dimen/margin_medium" android:layout_marginRight="@dimen/margin_medium" android:text="@string/or" />
            <FrameLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:background="@color/primary_mystique_light_text_color" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" android:layout_weight="0.5" />
        </LinearLayout>
        <TextView android:textSize="@dimen/text_size_large_mystique" android:textColor="@color/primary_mystique_text_color" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add_bank_manual_title" />
        <TextView android:textSize="@dimen/text_size_normal_mystique" android:textColor="@color/primary_mystique_light_text_color" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/add_bank_horizontal_margin_small" android:layout_marginTop="@dimen/margin_medium" android:layout_marginRight="@dimen/add_bank_horizontal_margin_small" android:text="@string/add_bank_manual_description" />
        <Button android:textSize="@dimen/text_size_medium_mystique" android:textColor="@color/coinbase_blue" android:id="@+id/btnConnectManually" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/add_bank_horizontal_margin" android:layout_marginTop="@dimen/margin_normal" android:layout_marginRight="@dimen/add_bank_horizontal_margin" android:layout_marginBottom="@dimen/add_bank_vertical_margin" android:text="@string/connect_manually" android:textAllCaps="false" style="@style/PrimaryMystiqueButton_BlueBorder" />
    </LinearLayout>
</LinearLayout>
